# mini-colmap

./: CMakeLists.txt  README.md  mini_colmap.cpp
data/: data_example.txt
src/: EPnP.cpp  bundle_adjust.cpp  estimate.cpp  optimize.cpp  read_data.cpp  triangulation.cpp
